--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+
+    "skipLibCheck": true,
+
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
